--- a/Gatherer.Api/appsettings.json
+++ b/Gatherer.Api/appsettings.json
@@ -11,5 +11,10 @@
         "Default": "Warning"
       }
     }
+  },
+  "jwt": {
+    "key": "supersecret!123",
+    "issuer": "http://localhost:5000",
+    "expiryMinutes": 60
   }
 }
