Working Register and Login

--- a/Gatherer.Api/appsettings.json
+++ b/Gatherer.Api/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "jwt": {
-    "key": "supersecret!123",
+    "key": "super_secret_!123",
     "issuer": "http://localhost:5000",
     "expiryMinutes": 60
   }
