Add password encryption

--- a/src/Gatherer.Api/Gatherer.Api.csproj
+++ b/src/Gatherer.Api/Gatherer.Api.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFac" Version="4.6.2" />
+    <PackageReference Include="AutoFac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
