--- a/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
+++ b/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFac" Version="4.6.2" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
   </ItemGroup>
