--- a/tests/Gatherer.Tests.EndToEnd/Gatherer.Tests.EndToEnd.csproj
+++ b/tests/Gatherer.Tests.EndToEnd/Gatherer.Tests.EndToEnd.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="autofac" Version="4.6.2" />
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
