--- a/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
+++ b/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AutoFac" Version="4.6.2" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
