--- a/src/Gatherer.Api/Gatherer.Api.csproj
+++ b/src/Gatherer.Api/Gatherer.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
