--- a/src/Gatherer.Api/Gatherer.Api.csproj
+++ b/src/Gatherer.Api/Gatherer.Api.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
+    <PackageReference Include="mongodb.driver" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
