--- a/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
+++ b/src/Gatherer.Infrastructure/Gatherer.Infrastructure.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
+    <PackageReference Include="microsoft.extensions.configuration" Version="2.0.0" />
+    <PackageReference Include="microsoft.extensions.configuration.binder" Version="2.0.0" />
+    <PackageReference Include="mongodb.driver" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
